NetBSD Problem Report #20410

Received: (qmail 926 invoked by uid 605); 18 Feb 2003 09:15:50 -0000
Message-Id: <20030218091549.73E0F1114C@narn.netbsd.org>
Date: Tue, 18 Feb 2003 01:15:49 -0800 (PST)
From: wojtek@3miasto.net
Sender: gnats-bugs-owner@netbsd.org
Reply-To: wojtek@3miasto.net
To: gnats-bugs@gnats.netbsd.org
Subject: SIS 85C496 chipset support is bad
X-Send-Pr-Version: www-1.0

>Number:         20410
>Category:       port-i386
>Synopsis:       SIS 85C496 chipset support is bad
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    port-i386-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 18 09:16:01 +0000 2003
>Closed-Date:    Wed Jul 31 15:02:59 +0000 2013
>Last-Modified:  Wed Jul 31 15:02:59 +0000 2013
>Originator:     Wojciech Puchar
>Release:        release 1-5 (quite new)
>Organization:
TENSOR ap
>Environment:
NetBSD ice.3miasto.net 1.5.4_ALPHA NetBSD 1.5.4_ALPHA (router.ice) #8: Tue Feb 18 09:56:31 CET 2003     wojtek@chylonia.3miasto.net:/home/wojtek/kernel/router.ice i386
>Description:
1.5 kernels (possibly 1.6 but i don't use) consider this chipset as broken 
on mmaped devices and just disables memory mapping.

that's definitely too strong, and it breaks some devices that works well and stable


>How-To-Repeat:
try using puc(4) with such chipset. computer hangs, serial ports locks
etc.

>Fix:
last lines in pci_machdep.c should look like:
                switch (PCI_VENDOR(id)) {
                case PCI_VENDOR_SIS:
                        switch (PCI_PRODUCT(id)) {
                        case PCI_PRODUCT_SIS_85C496:
                                goto warning_mem;
                                break;
                        }
                        break;
                }
        }

        return (rval);

 warning_mem:
        printf("Warning: broken PCI-Host bridge detected; some memory-mapped devices may not function
//      rval &= ~PCI_FLAGS_MEM_ENABLED;
        return (rval);
}

so administrator is just warned, but allowed to use.

after this patch router with puc works stable for 2 days (beofre - max 15 minutes )
other machine works fine with matrox millenium PCI (memory mapped) card as X terminal

memory mapped things seems to work fine, while busmaster devices not. for example
sip(4) doesn't.


>Release-Note:
>Audit-Trail:
From: "Soren S. Jorvang" <soren@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/20410 CVS commit: src/sys/arch
Date: Wed, 31 Jul 2013 14:05:33 +0000

 Module Name:	src
 Committed By:	soren
 Date:		Wed Jul 31 14:05:33 UTC 2013

 Modified Files:
 	src/sys/arch/amd64/amd64: mainbus.c
 	src/sys/arch/i386/i386: mainbus.c
 	src/sys/arch/x86/include: pci_machdep_common.h
 	src/sys/arch/x86/pci: pci_machdep.c

 Log Message:
 Blocking memory space accesses on the SIS 85C496 chipset turned out to be
 a bit too heavy-handed and similar cases are unlikely to crop up again,
 so simplify by eliminating pci_bus_flags().

 Closes PR port-i386/20410.


 To generate a diff of this commit:
 cvs rdiff -u -r1.33 -r1.34 src/sys/arch/amd64/amd64/mainbus.c
 cvs rdiff -u -r1.96 -r1.97 src/sys/arch/i386/i386/mainbus.c
 cvs rdiff -u -r1.11 -r1.12 src/sys/arch/x86/include/pci_machdep_common.h
 cvs rdiff -u -r1.58 -r1.59 src/sys/arch/x86/pci/pci_machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: soren@NetBSD.org
State-Changed-When: Wed, 31 Jul 2013 15:02:59 +0000
State-Changed-Why:


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.